--- a/source/sass/blocks/news.scss
+++ b/source/sass/blocks/news.scss
@@ -141,20 +141,20 @@
 }
 
 .news__slide--internship {
-  background-image: url("../../img/news/internship-huge.jpg");
+  background-image: url("../img/news/internship-huge.webp");
   background-position: center;
 }
 
 .news__slide--travel {
-  background-image: url("../../img/news/traveling.jpg");
+  background-image: url("../img/news/traveling.webp");
 }
 
 .news__slide--volunteering {
-  background-image: url("../../img/news/volunteering.jpg");
+  background-image: url("../img/news/volunteering.webp");
 }
 
 .news__slide--career {
-  background-image: url("../../img/news/career.jpg");
+  background-image: url("../img/news/career.webp");
   order: 4;
 }
 
@@ -177,7 +177,7 @@
       content: "";
       width: 16px;
       height: 16px;
-      background-image: url("../../img/svg/pagination-angle-biege.svg");
+      background-image: url("../img/svg/pagination-angle-biege.svg");
       background-size: 16px 16px;
       left: 0;
       top: -16px;
@@ -188,7 +188,7 @@
       content: "";
       width: 16px;
       height: 16px;
-      background-image: url("../../img/svg/pagination-angle-biege.svg");
+      background-image: url("../img/svg/pagination-angle-biege.svg");
       background-size: 16px 16px;
       right: -16px;
       bottom: 0;
@@ -214,7 +214,7 @@
       content: "";
       width: 16px;
       height: 16px;
-      background-image: url("../../img/svg/pagination-angle-biege.svg");
+      background-image: url("../img/svg/pagination-angle-biege.svg");
       background-size: 16px 16px;
       right: -16px;
       bottom: 0;
@@ -237,7 +237,7 @@
       content: "";
       width: 16px;
       height: 16px;
-      background-image: url("../../img/svg/pagination-angle-biege.svg");
+      background-image: url("../img/svg/pagination-angle-biege.svg");
       background-size: 16px 16px;
       right: -16px;
       bottom: 0;
