--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -149,15 +149,15 @@
 }
 
 .programs__slide--internship {
-  background-image: url("../../img/programs/internship.jpg");
+  background-image: url("../img/programs/internship.webp");
 }
 
 .programs__slide--volunteering {
-  background-image: url("../../img/programs/volunteering.jpg");
+  background-image: url("../img/programs/volunteering.webp");
 }
 
 .programs__slide--education {
-  background-image: url("../../img/programs/education.jpg");
+  background-image: url("../img/programs/education.webp");
 }
 
 .programs__text {
@@ -187,7 +187,7 @@
       content: "";
       width: 18px;
       height: 18px;
-      background-image: url("../../img/svg/pagination-angle.svg");
+      background-image: url("../img/svg/pagination-angle.svg");
       right: -18px;
       bottom: 0;
     }
