--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -99,7 +99,7 @@
       width: 42px;
       height: 42px;
       background-color: #316dc2;
-      background-image: url("../../img/svg/star.svg");
+      background-image: url("../img/svg/star.svg");
       background-size: 18px 22px;
       background-repeat: no-repeat;
       background-position: center;
