--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -279,8 +279,9 @@
 
   .footer__nav {
     margin-left: 0;
-    margin-bottom: 10px;
+    margin-bottom: 12px;
     order: 2;
+    letter-spacing: -0.5px;
 
     & ul {
       justify-content: center;
