--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -3,8 +3,8 @@
   font-weight: 300;
   font-family: "Manrope";
   font-display: swap;
-  src: url("../../fonts/Manrope-Light.woff2") format("woff2"),
-    url("../../fonts/Manrope-Light.woff") format("woff");
+  src: url("../fonts/Manrope-Light.woff2") format("woff2"),
+    url("../fonts/Manrope-Light.woff") format("woff");
 }
 
 @font-face {
@@ -12,8 +12,8 @@
   font-weight: 400;
   font-family: "Manrope";
   font-display: swap;
-  src: url("../../fonts/Manrope-Regular.woff2") format("woff2"),
-    url("../../fonts/Manrope-Regular.woff") format("woff");
+  src: url("../fonts/Manrope-Regular.woff2") format("woff2"),
+    url("../fonts/Manrope-Regular.woff") format("woff");
 }
 
 @font-face {
@@ -21,6 +21,6 @@
   font-weight: 500;
   font-family: "Manrope";
   font-display: swap;
-  src: url("../../fonts/Manrope-Medium.woff2") format("woff2"),
-    url("../../fonts/Manrope-Medium.woff") format("woff");
+  src: url("../fonts/Manrope-Medium.woff2") format("woff2"),
+    url("../fonts/Manrope-Medium.woff") format("woff");
 }
