--- a/source/sass/blocks/opinions.scss
+++ b/source/sass/blocks/opinions.scss
@@ -118,7 +118,7 @@
 .opinions__slide--sarah {
   & span {
     &::before {
-      background-image: url("../img/sarah.png");
+      background-image: url("../img/sarah.webp");
     }
   }
 }
@@ -126,7 +126,7 @@
 .opinions__slide--david {
   & span {
     &::before {
-      background-image: url("../img/david.png");
+      background-image: url("../img/david.webp");
     }
   }
 }
