--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -1,5 +1,5 @@
 .about__container {
-  padding: 120px 0 60px;
+  padding: 117px 0 60px;
   max-width: 1240px;
   margin: 0 auto;
   display: flex;
@@ -53,6 +53,7 @@
     color: #316dc2;
     font-weight: 400;
     margin: 0;
+    letter-spacing: -0.6px;
   }
 
   & p {
