--- a/source/sass/blocks/btn.scss
+++ b/source/sass/blocks/btn.scss
@@ -14,6 +14,7 @@
   letter-spacing: -0.3px;
   background-color: transparent;
   cursor: pointer;
+  user-select: none;
 
   &::after {
     position: absolute;
