--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -111,7 +111,7 @@
     cursor: pointer;
     position: relative;
     min-height: 20px;
-    margin-bottom: 40px;
+    margin-bottom: 5px;
 
     & input[type="checkbox"]:checked + .feedback__sort::before {
       position: absolute;
@@ -220,6 +220,7 @@
   color: $color-default-white;
   padding-top: 12px;
   width: 100%;
+  margin-top: 40px;
 
   &:not(:disabled):hover,
   &:not(:disabled):focus {
@@ -313,7 +314,7 @@
 
     & label {
       line-height: 20px;
-      gap: 5px;
+      gap: 4px;
     }
   }
 
@@ -329,7 +330,7 @@
   .form .feedback__input {
     gap: 6px;
     width: 100%;
-    margin-bottom: 20px;
+    margin-bottom: 22px;
 
     & .form__select-button {
       height: 50px;
@@ -369,14 +370,14 @@
 
   .feedback__form-container {
     max-width: 100%;
-    padding: 50px 15px 50px;
+    padding: 52px 15px 50px;
     min-height: 753px;
 
     & h2 {
       font-size: 18px;
       line-height: 22px;
       letter-spacing: -0.5px;
-      margin-bottom: 18px;
+      margin-bottom: 16px;
     }
 
     & p {
@@ -437,5 +438,6 @@
   .feedback__button {
     padding-top: 5px;
     padding-right: 55px;
+    margin: 0;
   }
 }
