--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -4,6 +4,15 @@
   margin-bottom: 20px;
 }
 
+.form {
+  & .is-invalid {
+    color: #ff5e66;
+    font-size: 12px;
+    line-height: 12px;
+    position: static;
+  }
+}
+
 .form__input {
   width: 100%;
   margin-bottom: 18px;
@@ -15,12 +24,6 @@
     font-size: 14px;
     line-height: 18px;
     color: rgba(72, 72, 72, 0.8);
-  }
-
-  & .is-invalid {
-    color: #ff5e66;
-    font-size: 12px;
-    line-height: 12px;
   }
 
   & .is-valid {
@@ -135,7 +138,7 @@
     cursor: pointer;
     position: relative;
     min-height: 20px;
-    margin-bottom: 30px;
+    margin-bottom: 5px;
 
     & input[type="checkbox"]:checked + .form__sort::before {
       position: absolute;
@@ -232,6 +235,7 @@
   margin: 0 auto;
   letter-spacing: -0.5px;
   padding: 10px 75px 10px 30px;
+  margin-top: 25px;
 }
 
 @media (max-width: $tablet-width) {
