--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -86,6 +86,10 @@
     margin: 0;
   }
 
+  & .custom-select__error {
+    display: none;
+  }
+
   & .form__select-label {
     color: rgba(240, 239, 233, 0.8);
     margin-bottom: 0;
