--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -64,7 +64,7 @@
       background-color: rgba(169, 175, 183, 0.2);
     }
 
-    &:not(:placeholder-shown) {
+    &:invalid {
       border-color: #ff5e66;
       background-color: rgba(255, 94, 102, 0.2);
     }
@@ -227,6 +227,11 @@
   font-size: 12px;
   line-height: 12px;
   margin-top: 5px;
+}
+
+.form__check.is-invalid .form__sort {
+  outline: 1px solid #ff5e66;
+  background-color: rgba(255, 94, 102, 0.2);
 }
 
 .form__button {
